# blastweb

./: .gitignore  README.md  __main__.py  app.py  blast.yaml.example  cli.py  pyproject.toml
blastweb/: __init__.py  app.py  blast.yaml.example
blastweb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
blastweb/templates/: index.html
templates/: result.html
